crates/toml/tests/snapshots/invalid/integer/text-after-integer.stderr
TOML parse error at line 1, column 17
  |
1 | answer = 42 the ultimate answer?
  |                 ^
unexpected key or value, expected newline, `#`

---
TOML parse error at line 1, column 10
  |
1 | answer = 42 the ultimate answer?
  |          ^^^^^^
string values must be quoted, expected literal string
